deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sampleapp-deployment
spec:
  # A deployment's specification really only 
  # has a few useful options
  
  # 1. How many copies of each pod do we want?
  replicas: 3

  # 2. How do want to update the pods?
  strategy: Recreate

  # 3. Which pods are managed by this deployment?
  selector:
    # This must match the labels we set on the pod!
    matchLabels:
      deploy: sampleapp-deployment
  
  # This template field is a regular pod configuration 
  # nested inside the deployment spec
  template:
    metadata:
      # Set labels on the pod.
      # This is used in the deployment selector.
      labels:
        deploy: sampleapp-deployment
    spec:
      containers:
        - name: sampleapp
          image: <image/path>sampleapp:latest
