sample-app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
  name: sampleapp-ingress-nginx
  namespace: default
spec:
  rules:
  - host: sampleapp.mysite.com
    http:
      paths:
      - backend:
          serviceName: sampleapp-deployment-service
          servicePort: 5000
        path: /
